examples/test/testpolicy6547.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6547
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key10: value3
      key15: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value15
          key35: value23
          key45: value9
      podSelector:
        matchLabels:
          key37: value22
